--- a/src/views/PP.handlebars
+++ b/src/views/PP.handlebars
@@ -18,4 +18,4 @@
 
 
 <script src="https://js.stripe.com/v3/"></script>
-<script src="/js/pagos.js"></script>
+<script src="/src/public/js/pagos.js"></script>
