--- a/src/views/viewCarts.handlebars
+++ b/src/views/viewCarts.handlebars
@@ -39,4 +39,4 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-<script src="/js/viewCarts.js"></script>
+<script src="/src/public/js/viewCarts.js"></script>
